   sends these events to the "security" logger level.  Currently, AMI is the only
   Asterisk component that reports security events.  However, SIP support will be
   coming soon.  For more information on the security events framework, see the
   "Security Events" chapter of the included documentation - doc/tex/asterisk.pdf.

Fax
---
 * A technology independent fax frontend (res_fax) has been added to Asterisk.
 * A spandsp based fax backend (res_fax_spandsp) has been added.
 * The app_fax module has been deprecated in favor of the res_fax module and
   the new res_fax_spandsp backend.
 * The SendFAX and ReceiveFAX applications now send their log messages to a
   'fax' logger level, instead of to the generic logger levels. To see these
   messages, the system's logger.conf file will need to direct the 'fax' logger
   level to one or more destinations; the logger.conf.sample file includes an
   example of how to do this. Note that if the 'fax' logger level is *not*
   directed to at least one destination, log messages generated by these
   applications will be lost, and that if the 'fax' logger level is directed to
   the console, the 'core set verbose' and 'core set debug' CLI commands will
   have no effect on whether the messages appear on the console or not.

Miscellaneous
-------------
 * The transmit_silence_during_record option in asterisk.conf.sample has been removed.
   Now, in order to enable transmitting silence during record the transmit_silence
   option should be used.  transmit_silence_during_record remains a valid option, but
   defaults to the behavior of the transmit_silence option.
 * Addition of the Unit Test Framework API for managing registration and execution
   of unit tests with the purpose of verifying the operation of C functions.
 * SendText is now implemented in chan_gtalk and chan_jingle. It will simply send
   XMPP text messages to the remote JID.
 * Modules.conf has a new option - "require" - that marks a module as critical for 